--- a/Chapter04_Q30_Q39.ipynb
+++ b/Chapter04_Q30_Q39.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Chapter04-Q30-Q39.ipynb",
       "version": "0.3.2",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -30,6 +31,10 @@
       },
       "cell_type": "markdown",
       "source": [
+        "# :muscle: 前書き\n",
+        "詳細は[第1章](https://qiita.com/saitotak/items/73852ecb7cc4b10b42a5)参照、引き続き言語処理100本ノックの第3章を回答していきます。本章では TBD\n",
+        "\n",
+        "\n",
         "# :muscle: 第4章: 形態素解析\n",
         "> 夏目漱石の小説『吾輩は猫である』の文章（[neko.txt](http://www.cl.ecei.tohoku.ac.jp/nlp100/data/neko.txt)）をMeCabを使って形態素解析し，その結果をneko.txt.mecabというファイルに保存せよ．このファイルを用いて，以下の問に対応するプログラムを実装せよ．\n",
         "> なお，問題37, 38, 39は[matplotlib](http://matplotlib.org/)もしくは[Gnuplot](http://www.gnuplot.info/)を用いるとよい．\n",
@@ -385,6 +390,43 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "Kh5si4i1Ejgj",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "TBD\n",
+        "\n",
+        "## ⚾ 31. 動詞\n",
+        "> 動詞の表層形をすべて抽出せよ．\n",
+        "\n",
+        "## ⚾ 32. 動詞の原形\n",
+        "> 動詞の原形をすべて抽出せよ．\n",
+        "\n",
+        "## ⚾ 33. サ変名詞\n",
+        "> サ変接続の名詞をすべて抽出せよ．\n",
+        "\n",
+        "## ⚾ 34. 「AのB」\n",
+        "> 2つの名詞が「の」で連結されている名詞句を抽出せよ．\n",
+        "\n",
+        "## ⚾ 35. 名詞の連接\n",
+        "> 名詞の連接（連続して出現する名詞）を最長一致で抽出せよ．\n",
+        "\n",
+        "## ⚾ 36. 単語の出現頻度\n",
+        "> 文章中に出現する単語とその出現頻度を求め，出現頻度の高い順に並べよ．\n",
+        "\n",
+        "## ⚾ 37. 頻度上位10語\n",
+        "> 出現頻度が高い10語とその出現頻度をグラフ（例えば棒グラフなど）で表示せよ．\n",
+        "\n",
+        "## ⚾ 38. ヒストグラム\n",
+        "> 単語の出現頻度のヒストグラム（横軸に出現頻度，縦軸に出現頻度をとる単語の種類数を棒グラフで表したもの）を描け．\n",
+        "\n",
+        "## ⚾ 39. Zipfの法則\n",
+        "> 単語の出現頻度順位を横軸，その出現頻度を縦軸として，両対数グラフをプロットせよ．\n"
+      ]
     }
   ]
 }
