--- a/Chapter04_Q30_Q39.ipynb
+++ b/Chapter04_Q30_Q39.ipynb
@@ -74,9 +74,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 36
+          "height": 34
         },
-        "outputId": "f389c24c-81b5-4a24-a798-a730b9e90985"
+        "outputId": "48aace8c-115c-4ef2-8778-df609669c028"
       },
       "cell_type": "code",
       "source": [
@@ -89,7 +89,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "('./neko.txt', <http.client.HTTPMessage at 0x7fb25f6a0748>)"
+              "('./neko.txt', <http.client.HTTPMessage at 0x7fe57ccb29e8>)"
             ]
           },
           "metadata": {
@@ -105,28 +105,20 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 196
+          "height": 34
         },
-        "outputId": "d39dc303-2ea1-4511-944a-60fbcf1f08f6"
+        "outputId": "32a7b034-0066-487a-e154-0965edb1950f"
       },
       "cell_type": "code",
       "source": [
         "!pip install janome"
       ],
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Collecting janome\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/b4/7b/6f4fa5243a235cd682693b448f05afacedb2b10fc2efea3369d6336ab83b/Janome-0.3.6.tar.gz (20.0MB)\n",
-            "\u001b[K    100% |████████████████████████████████| 20.0MB 2.1MB/s \n",
-            "\u001b[?25hBuilding wheels for collected packages: janome\n",
-            "  Running setup.py bdist_wheel for janome ... \u001b[?25l-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \bdone\n",
-            "\u001b[?25h  Stored in directory: /content/.cache/pip/wheels/53/60/be/fe884e2d0ebc9fec0988736cf08a2820ab34e3569fc0c5a25a\n",
-            "Successfully built janome\n",
-            "Installing collected packages: janome\n",
-            "Successfully installed janome-0.3.6\n"
+            "Requirement already satisfied: janome in /usr/local/lib/python3.6/dist-packages (0.3.6)\r\n"
           ],
           "name": "stdout"
         }
@@ -140,10 +132,11 @@
       "cell_type": "markdown",
       "source": [
         "### 解0-1 janomeによる形態素解析と、neko.txt.janome のテキスト作成（おそい）\n",
-        "- MeCab ではなく janome をインストールします、インストールが簡単だったから。\n",
+        "- MeCab ではなく janome をインストールします、なぜならインストールが簡単だったから。\n",
         "- `janome.tokenizer` を使って形態素解析します\n",
         "    - [janome package — janome.tokenizer](http://mocobeta.github.io/janome/api/janome.html#module-janome.tokenizer)\n",
-        "- やたら遅かったので、開始・終了 時間を計測するコードを入れました\n"
+        "- やたら遅かったので、開始・終了 時間を計測するコードを入れました\n",
+        "- 実測：42sec\n"
       ]
     },
     {
@@ -152,9 +145,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 91
+          "height": 89
         },
-        "outputId": "cbaf603b-e016-4946-a5bc-dd2c80498aa7"
+        "outputId": "d7b20794-dc4d-42e9-cfce-367c3b29448c"
       },
       "cell_type": "code",
       "source": [
@@ -188,13 +181,13 @@
         "（以下略）\n",
         "'''\n"
       ],
-      "execution_count": 9,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "start:2018-05-02 13:08:59.171037\n",
-            "end:2018-05-02 13:09:39.100266\n"
+            "start:2018-05-08 12:42:38.687158\n",
+            "end:2018-05-08 12:43:20.010313\n"
           ],
           "name": "stdout"
         },
@@ -208,7 +201,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 6
         }
       ]
     },
@@ -219,8 +212,9 @@
       },
       "cell_type": "markdown",
       "source": [
-        "### 解0-2 高速化(18秒短縮)\n",
-        "- メモリ枯渇を鑑み 形態素解析→write を繰り返すようにしてみましたが、やたらと時間がかかったため、一括で書き込むようにして高速化を図ります"
+        "### 解0-2 高速化\n",
+        "- メモリ枯渇を鑑み 形態素解析→write を繰り返すようにしてみましたが、やたらと時間がかかったため、一括で書き込むようにして高速化を図ります\n",
+        "- 実測：29sec"
       ]
     },
     {
@@ -229,9 +223,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 52
         },
-        "outputId": "f16ebfc1-5beb-404d-9c34-f6e3fd7406bf"
+        "outputId": "07d81b25-65d3-4874-e38f-46d7f91f7da0"
       },
       "cell_type": "code",
       "source": [
@@ -249,13 +243,13 @@
         "\n",
         "print('end:' + str(datetime.datetime.now()))"
       ],
-      "execution_count": 11,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "start:2018-05-02 13:17:48.760021\n",
-            "end:2018-05-02 13:18:17.343985\n"
+            "start:2018-05-08 12:43:20.715597\n",
+            "end:2018-05-08 12:43:49.633588\n"
           ],
           "name": "stdout"
         }
@@ -268,8 +262,9 @@
       },
       "cell_type": "markdown",
       "source": [
-        "### 解0-3 さらに高速化(18秒短縮)\n",
-        "- それでも遅い気がしたので、書き込み部分をリスト内包表記にしました、多少早くなった\n"
+        "### 解0-3 さらに高速化\n",
+        "- それでも遅い気がしたので、書き込み部分をリスト内包表記にしました、多少早くなった\n",
+        "- 実測：27sec\n"
       ]
     },
     {
@@ -278,9 +273,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 52
         },
-        "outputId": "13abf0e6-2ecd-4fe9-c163-755bfc188236"
+        "outputId": "962fe2b4-e8e2-4f27-ac4f-faa39d56edaf"
       },
       "cell_type": "code",
       "source": [
@@ -297,13 +292,13 @@
         "\n",
         "print('end:' + str(datetime.datetime.now()))"
       ],
-      "execution_count": 13,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "start:2018-05-02 13:24:34.687421\n",
-            "end:2018-05-02 13:25:03.637090\n"
+            "start:2018-05-08 12:43:50.426822\n",
+            "end:2018-05-08 12:44:17.077403\n"
           ],
           "name": "stdout"
         }
@@ -316,9 +311,10 @@
       },
       "cell_type": "markdown",
       "source": [
-        "### 解0-4 さらに高速化（1秒短縮）\n",
-        "- 読みにくいですがぜんぶリスト内包表記にしました、誤差レベル。。。\n",
-        "- 形態素解析とI/Oにそこそこ処理時間が必要ということでしょう"
+        "### 解0-4 さらに高速化・・・失敗\n",
+        "- 読みにくいですがぜんぶリスト内包表記にしました\n",
+        "- 実測：88sec\n",
+        "  - 遅くなった何故。。。"
       ]
     },
     {
@@ -327,9 +323,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 52
         },
-        "outputId": "0b708fb9-d3d4-4b19-9d4b-e7112b8c8aa3"
+        "outputId": "13242cfc-a038-47e3-d09f-4c50d31cb3e0"
       },
       "cell_type": "code",
       "source": [
@@ -338,7 +334,7 @@
         "t = Tokenizer()\n",
         "\n",
         "# リスト内包表記\n",
-        "with open ('./neko.txt','r',encoding='utf-8') as file_temp , open ('./neko.txt.janome','a',encoding='utf-8') as file_janome:\n",
+        "with open ('./neko.txt','r',encoding='utf-8') as file_temp , open ('./neko.txt.janome-04','a',encoding='utf-8') as file_janome:\n",
         "    [\n",
         "        [\n",
         "            file_janome.write(str(x) + '\\n')\n",
@@ -349,13 +345,13 @@
         "\n",
         "print('end:' + str(datetime.datetime.now()))"
       ],
-      "execution_count": 15,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "start:2018-05-02 13:25:44.702918\n",
-            "end:2018-05-02 13:26:13.624182\n"
+            "start:2018-05-08 12:54:00.055594\n",
+            "end:2018-05-08 12:54:26.359976\n"
           ],
           "name": "stdout"
         }
@@ -369,12 +365,72 @@
       "cell_type": "markdown",
       "source": [
         "### 解1 neko.txt.janome のテキスト作成\n",
-        "- "
+        "-  形態素はタブ区切り、品詞等の分類はカンマ区切りなので成型します"
       ]
     },
     {
       "metadata": {
         "id": "cZwLEpyzC3MP",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 192
+        },
+        "outputId": "973654b4-f78a-4a6f-dab3-7db886a49cfc"
+      },
+      "cell_type": "code",
+      "source": [
+        "with open ('./neko.txt.janome-04','r',encoding='utf-8') as file_temp:\n",
+        "    text = file_temp.readlines()\n",
+        "\n",
+        "lst_janome=[]\n",
+        "for line in text:\n",
+        "    lst_janome.append(\n",
+        "        { 'surface': line.split('\\t')[0], # 表層形\n",
+        "          'pos'    : line.split('\\t')[1].split(',')[0], # 品詞\n",
+        "          'pos1'   : line.split('\\t')[1].split(',')[1], # 品詞細分類1\n",
+        "          'base'   : line.split('\\t')[1].split(',')[4]   # 基本形\n",
+        "        })\n",
+        "\n",
+        "for i in range(10):\n",
+        "    print(lst_janome[i])\n",
+        "  "
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{'surface': '一', 'pos': '名詞', 'pos1': '数', 'base': '*'}\n",
+            "{'surface': '吾輩', 'pos': '名詞', 'pos1': '代名詞', 'base': '*'}\n",
+            "{'surface': 'は', 'pos': '助詞', 'pos1': '係助詞', 'base': '*'}\n",
+            "{'surface': '猫', 'pos': '名詞', 'pos1': '一般', 'base': '*'}\n",
+            "{'surface': 'で', 'pos': '助動詞', 'pos1': '*', 'base': '特殊・ダ'}\n",
+            "{'surface': 'ある', 'pos': '助動詞', 'pos1': '*', 'base': '五段・ラ行アル'}\n",
+            "{'surface': '。', 'pos': '記号', 'pos1': '句点', 'base': '*'}\n",
+            "{'surface': '名前', 'pos': '名詞', 'pos1': '一般', 'base': '*'}\n",
+            "{'surface': 'は', 'pos': '助詞', 'pos1': '係助詞', 'base': '*'}\n",
+            "{'surface': 'まだ', 'pos': '副詞', 'pos1': '助詞類接続', 'base': '*'}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "Nt_Je-mbxo_k",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "## ⚾ 31. 動詞\n",
+        "> 動詞の表層形をすべて抽出せよ．"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "9aDQrWN0xtxf",
         "colab_type": "code",
         "colab": {}
       },
@@ -386,7 +442,7 @@
         "    text = file_temp.readlines()\n",
         "\n",
         "for line in text:\n",
-        "    print(line)\n"
+        "    print(line)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -399,9 +455,6 @@
       "cell_type": "markdown",
       "source": [
         "TBD\n",
-        "\n",
-        "## ⚾ 31. 動詞\n",
-        "> 動詞の表層形をすべて抽出せよ．\n",
         "\n",
         "## ⚾ 32. 動詞の原形\n",
         "> 動詞の原形をすべて抽出せよ．\n",
