--- a/Chapter04_Q30_Q39.ipynb
+++ b/Chapter04_Q30_Q39.ipynb
@@ -683,7 +683,7 @@
       "cell_type": "markdown",
       "source": [
         "## 解1. 普通にループ\n",
-        "- 名詞 の 名詞 を探します"
+        "- 名詞 の繰り返しを探します"
       ]
     },
     {
@@ -694,24 +694,28 @@
           "base_uri": "https://localhost:8080/",
           "height": 55
         },
-        "outputId": "2fab0bc9-c6e5-4bf0-c57a-472eda4a9ed4"
+        "outputId": "fd3c1303-6b47-411a-cb9b-0c973090d5b7"
       },
       "cell_type": "code",
       "source": [
         "lst_res = []\n",
-        "for i,janome in enumerate(lst_janome):\n",
-        "    if janome.get('base') == 'の':\n",
-        "        if (lst_janome[i-1].get('pos') == '名詞') and (lst_janome[i+1].get('pos') == '名詞'):\n",
-        "          lst_res.append(lst_janome[i-1].get('base') + janome.get('base') + lst_janome[i+1].get('base'))\n",
+        "lst_tmp = []\n",
+        "for janome in lst_janome:\n",
+        "    if janome.get('pos') == '名詞':\n",
+        "         lst_tmp.append(janome.get('surface'))\n",
+        "    else:\n",
+        "        lst_tmp.clear()\n",
+        "    if(len(lst_tmp) > 4): #ほんとは1が条件\n",
+        "        lst_res.append(''.join(lst_tmp))\n",
         "\n",
-        "print(lst_res[::20])"
+        "print(lst_res[::10])"
       ],
-      "execution_count": 26,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "['彼の掌', '彼の書生', '主人の傍', '家の書生', '今更のよう', '主人の彩色', '純粋の黒', '吾輩の心臓', '彼の鼻', '黒の子分', '元の通り', 'ハリソンの歴史', '赤松の間', '主人のよう', '吾輩の主人', '門の格子', '実のところ', '後の猫', '壺の中', '障子の隙', '主人のよう', '主人の心', '二絃琴の師匠', '贅沢の結果', '二の真理', '在来の通り', '欣羨の意', '理詰の虚言', '初春の長閑', '主人の笑い声', 'つもりのところ', '方面の研究', '娼家の下婢', '念の体', '男の事', '感謝の意', '世紀の今日', '自分の境遇', '毛の病気', '平等の水彩', 'トチメンボーの復讐', '明治の文壇', '他の松', '博士の夫人', '遠くの方', '門の内', '水の労', '縮緬の羽織', '主人の我儘', '障子のうち', '教師の所', '吾輩の写真', '居士の事', '自分の家', '先刻の不平', '冊の内', '一流の論理', '迷亭の専断', '縄の一端', '御存じの平均', '埒の方', '女の声', '金田の倉', '私の家', '寒月の方', '車屋の神', '地球の磁気', '枚の絵葉書', '月並の標本', 'ステッキの代り', '活眼の士', '尻尾の先', '無用の長物', '車夫の声', '夜光の明', 'さんの話', '長吉の方', '尻尾の先', '忠告の通り', '垣の隙', '護の恐れ', '眉の根', '鼻の持主', '何のため', '空の縄張', '雪隠の横', '色の口', '僧の癖', '奴の娘', '天気の日', '右手の指', '供の袖', '時の印象', '鼻の中', '自分のため', '心の故', '下の方', '腹の内', '人の悪口', '本人の随意', '迷亭の食い気', '元のよう', '迷亭の答え', '近来の珍', 'ものの息女', '派の元祖', '智識の問屋', '贔負の尊公', '雪の夜', '目下の状態', '鼠の糞', '狼藉の練', '柳行李の間', '俗人の考', '失敗の痕', '神の製作', '未来の事件', '柳行李の辺', '山の芋の箱', '寝室の方', '山の芋の寄贈', 'さまのよう', '君の鍋', '細君の質問', '辺の逸事', 'これらの凡眼', '腰障子の破れ', '山芋の夢', '吾輩の手際', '竈の影', '軽蔑の極', '棚の縁', '相応の炯々', '頭の毛', '鼻の汗', '屋のせがれ', '人さし指の先', '鋲の頭', '蕎麦の味', '脱兎の勢', '硝子の球', '恋の何', '鏡花の小説', '娘の顔', '思いのほか', '奥さんのよう', '帳場の所', '頃の女', '女の名前', '襖の陰', '烏の足', '談話の局面', '私の友人', '金田の令嬢', '当時の有様', '波の上', '一物の上', '書物の表紙', '蟷螂の羽根', '他の動物', '庭の敷石', '松の木の上', '地面の上', '飯の時刻', '灰色の毛', '山のよう', '像の模写', '服装の動物', '今日の車夫', '元の杢', '左の方', '思いの吾輩', '外国のよう', '戸の潜り', '気味の主人', '死の遠因', '中の大王', '吾輩の頭', '猫の鳴き声', '野中の一軒家', '騒動の種', '笹の上', '流の言葉', '場合の適例', '鰹節の一', '角の穴', '格子の中', '主人の先君', '屋の牛鍋', '人文のため', '例の頭', '鷲の了見', '山下の雁', '談判の衝', 'ヘクトーの死骸', '形勝の地', '特別の場合', '他の力', '座敷のうち', '雑兵の役', '落雲館の生徒', '勘弁のしよう', '鈴木の藤', '家の腕前', '金田の事', '殊勝の志', '迷亭の美学', '中学の生徒', '自分の心', '上の統計', '老のかご', '彼の忠告', 'こないだの事', '自己の非', '時計のよう', '自分の代理', '北国の冬空', '心の象徴', '字の尾', '隆盛の段', '江の水', '金の依頼', '精神の修養', '瓦解の折', '正成の甲', '人の構', '君のよう', '寄宿の二', '道場の坊主', '無駄骨のよう', 'せんだっての泥棒', '人の所', '境の壁', '同類のよう', '人間の膝', '迷の種', '学の命題', '居候の身分', '個の炭', '棚の上', '一間の間隔', '勝手次第の方角', '自炊の鍋', '自分のもの', '塗の朱', '等の他', 'ばの前', '紫色の袴', 'さんの学校', '重箱のなか', '様の方', 'さんの倍', '障子の方', '愚物の癖', '舞台の役者', '恭謙の君子', '今の名', '様のよう', '僕のおやじ', '見ず知らずの人', '分別の出所', '時代のため', '読売新聞の上', '金田の令嬢', '石の並べ方', '座敷の入口', 'こっちの談話', 'ヴァイオリンの箱', '君の国', '人生の意義', '時の苦しみ', '夜具の中', '蝸牛の庵', '蝦蟇口の中', '枯柳の数', '私の顔', '鈴木の藤', '夢の枕', '草の戸', '霊の気', '毛脛のよう', 'ぐるの栄', '人の心', '悟道の類', '文明の咒詛', '皇の後ろ', '水の力', '脚本のなか', '天下の公民', '秋の日', '恥のよう', '僕の未来', '他人のよう', '失恋の結果', '両者の御蔭', '英国の小説', '参考のため', '自然の誘惑', '結婚の時', 'たるの栄', '鈴木の藤', '何の酔', '水の中']\n"
+            "['壱円五十銭', '是非共二三十', '四時十五分前', '八万八千八百八十本', '千七百八十', '帰泉院殿黄鶴', '明治三十八年', '十二円五十', '十年一狐裘', '三日三晩手', '弥次馬兼援兵', '珍野苦沙弥先生虎', '明治十一年九月廿八', '際武右衛門君', '五六十本半紙', '六十二回六十']\n"
           ],
           "name": "stdout"
         }
