--- a/Chapter04_Q30_Q39.ipynb
+++ b/Chapter04_Q30_Q39.ipynb
@@ -682,8 +682,10 @@
       },
       "cell_type": "markdown",
       "source": [
+        "\n",
         "## 解1. 普通にループ\n",
-        "- 名詞 の繰り返しを探します"
+        "- 名詞 の繰り返しを探します\n",
+        "- 名詞×5以上 を求めてみました"
       ]
     },
     {
@@ -723,6 +725,46 @@
     },
     {
       "metadata": {
+        "id": "tgOuW_v5rM4j",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## ⚾ 36. 単語の出現頻度\n",
+        "> 文章中に出現する単語とその出現頻度を求め，出現頻度の高い順に並べよ．\n"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "aA-D0KS-rJV8",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ]
+    },
+    {
+      "metadata": {
+        "id": "BD2zINSQrq3V",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "lst_res = []\n",
+        "lst_tmp = []\n",
+        "for janome in lst_janome:\n",
+        "    lst_tmp.append(janome.get('surface'))\n",
+        "# 😶\n",
+        "    \n",
+        "print(lst_res[::10])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
         "id": "Kh5si4i1Ejgj",
         "colab_type": "text"
       },
@@ -730,9 +772,6 @@
       "source": [
         "TBD\n",
         "\n",
-        "\n",
-        "## ⚾ 36. 単語の出現頻度\n",
-        "> 文章中に出現する単語とその出現頻度を求め，出現頻度の高い順に並べよ．\n",
         "\n",
         "## ⚾ 37. 頻度上位10語\n",
         "> 出現頻度が高い10語とその出現頻度をグラフ（例えば棒グラフなど）で表示せよ．\n",
