Colaboratory を使用して作成しました

--- a/Chapter04_Q30_Q39.ipynb
+++ b/Chapter04_Q30_Q39.ipynb
@@ -22,7 +22,9 @@
       "cell_type": "markdown",
       "source": [
         "# :muscle: 前書き\n",
-        "詳細は[第1章](https://qiita.com/saitotak/items/73852ecb7cc4b10b42a5)参照、引き続き言語処理100本ノックの第3章を回答していきます。本章では TBD\n",
+        "詳細は[第1章](https://qiita.com/saitotak/items/73852ecb7cc4b10b42a5)参照、引き続き言語処理100本ノックの第4章を回答していきます。本章では 青空文庫の「吾輩は猫である」のテキストを題材に、形態素解析と統計・グラフ描画を行っていきます。言語処理っぽくなってきました。\n",
+        "\n",
+        "同じデータの使い回しがおおく、流石にローカルPythonだと辛くなってきたので、今回から Colabolatory の JupyterNotebook を使っています。\n",
         "\n",
         "\n",
         "# :muscle: 第4章: 形態素解析\n",
@@ -53,9 +55,10 @@
       },
       "cell_type": "markdown",
       "source": [
-        "## 下準備として\n",
-        "- ファイルダウンロード\n",
-        "- janomeのインストール"
+        "### 下準備として\n",
+        "- データのダウンロード\n",
+        "- janomeのインストール\n",
+        "    - MeCab ではなく janome をインストールします、理由はインストールが楽だったから\n"
       ]
     },
     {
@@ -122,7 +125,6 @@
       "cell_type": "markdown",
       "source": [
         "### 解0-1 janomeによる形態素解析と、neko.txt.janome のテキスト作成（おそい）\n",
-        "- MeCab ではなく janome をインストールします、なぜならインストールが簡単だったから。\n",
         "- `janome.tokenizer` を使って形態素解析します\n",
         "    - [janome package — janome.tokenizer](http://mocobeta.github.io/janome/api/janome.html#module-janome.tokenizer)\n",
         "- やたら遅かったので、開始・終了 時間を計測するコードを入れました\n",
