Colaboratory を使用して作成しました

--- a/Chapter04_Q30_Q39.ipynb
+++ b/Chapter04_Q30_Q39.ipynb
@@ -1025,14 +1025,15 @@
       },
       "cell_type": "markdown",
       "source": [
-        "\n",
-        "## 解1. \n",
-        "- 両対数グラフってなんでしょう…\n",
+        "### 解1. loglogによる両対数グラフ\n",
+        "- 両対数グラフ、Zipfの法則ってなんでしょう…\n",
         "\n",
         "> 両対数グラフ（りょうたいすうぐらふ、log-log graph）とは、グラフの両方の軸が対数目盛になっているグラフである。極端に範囲の広いデータを扱える。(Wikipedia)\n",
+        "> ジップの法則（ジップのほうそく、Zipf's law）あるいはジフの法則とは、出現頻度が k 番目に大きい要素が全体に占める割合が 1/k に比例するという経験則である。(Wikipedia)\n",
         "\n",
-        "- `loglog` で両対数グラフが描画できました\n",
-        "    - [matplotlib.pyplot.loglog — Matplotlib 2.2.2 documentation](https://matplotlib.org/api/_as_gen/matplotlib.pyplot.loglog.html)"
+        "- `matplotlib.pyplot.loglog` で両対数グラフが描画できました\n",
+        "    - [matplotlib.pyplot.loglog — Matplotlib 2.2.2 documentation](https://matplotlib.org/api/_as_gen/matplotlib.pyplot.loglog.html)\n",
+        "\n"
       ]
     },
     {
